# XFE

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h  config.h.in  configure  configure.ac  iconlinks.sh  xfe.1  xfe.spec  xferc.in  xfi.1  xfi.desktop.in.in  xfp.1  xfp.desktop.in.in  xfw.1  xfw.desktop.in.in
debian/: changelog  files  xfe.substvars
icons/: Makefile  Makefile.am  Makefile.in
icons/gnome-theme/: Makefile  Makefile.in
icons/gnomeblue-theme/: Makefile  Makefile.in
icons/kde-theme/: Makefile  Makefile.in
icons/tango-theme/: Makefile  Makefile.in
icons/windows-theme/: Makefile  Makefile.in
icons/xfe-theme/: Makefile  Makefile.in
intl/: bindtextdom.c  dcgettext.c  dcigettext.c  dcngettext.c  dgettext.c  dngettext.c  eval-plural.h  explodename.c  finddomain.c  gettext.c  gettextP.h  gmo.h  hash-string.c  intl-compat.c  intl-exports.c  l10nflist.c  langprefs.c  loadinfo.h  loadmsgcat.c  localcharset.c  localealias.c  localename.c  lock.c  lock.h  log.c  ngettext.c  os2compat.c  plural-exp.c  plural-exp.h  plural.c  printf-args.c  printf-args.h  printf-parse.c  printf-parse.h  printf.c  relocatable.c  relocatable.h  textdomain.c  vasnprintf.c  vasnprintf.h  (+3 more)
libsn/: sn-common.c  sn-common.h  sn-internals.h  sn-launchee.c  sn-launchee.h  sn-launcher.c  sn-launcher.h  sn-list.c  sn-list.h  sn-monitor.c  sn-monitor.h  sn-util.c  sn-util.h  sn-xmessages.c  sn-xmessages.h  sn-xutils.c  sn-xutils.h  sn.h
m4/: Makefile.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  bs.po  ca.po  cs.po  da.po  de.po  el.po  es.po  es_AR.po  es_CO.po  fr.po  hu.po  it.po  ja.po  nl.po  no.po  pl.po  pt_BR.po  pt_PT.po  ru.po  sv.po  tr.po  xfe.pot  zh_CN.po  zh_TW.po
src/: ArchInputDialog.cpp  ArchInputDialog.h  Bookmarks.cpp  Bookmarks.h  BrowseInputDialog.cpp  BrowseInputDialog.h  CommandWindow.cpp  CommandWindow.h  DialogBox.cpp  DialogBox.h  DirHistBox.cpp  DirHistBox.h  DirList.cpp  DirList.h  DirPanel.cpp  DirPanel.h  ExecuteBox.cpp  ExecuteBox.h  File.cpp  File.h  FileDialog.cpp  FileDialog.h  FileDict.cpp  FileDict.h  FileList.cpp  FileList.h  FilePanel.cpp  FilePanel.h  FontDialog.cpp  FontDialog.h  HistInputDialog.cpp  HistInputDialog.h  IconList.cpp  IconList.h  InputDialog.cpp  InputDialog.h  Keybindings.cpp  Keybindings.h  KeybindingsDialog.cpp  KeybindingsDialog.h  (+43 more)
st/: arg.h  config.h  st.c  st.h
